# ai-engineer-training

./: .gitignore
week03-homework/: pyproject.toml
week03-homework/chunking_research/: experiment_results.json  main.py  report.md
week03-homework/chunking_research/data/documents/: LLM_wiki.md  RAG_wiki.md  SCP_wiki.md
