[project]
name = "week03-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"python-dotenv",
	"llama-index>=0.13.6",
	"llama-index-embeddings-dashscope",
	"llama-index-llms-openai-like",
	"llama-index-embeddings-openai",
	"llama-index-llms-dashscope",
	"llama-index-embeddings-dashscope",
	"llama-index-embeddings-openai-like",
	"paddlepaddle<=2.6",
	"paddleocr<3.0",
]
